@@ -1,5 +1,6 @@
 ver 0.23.5 (not yet released)
 * protocol
+  - support relative offsets for "searchadd"
   - fix "searchaddpl" bug (bogus error "Bad position")
 * migrate to PCRE2
 * GCC 12 build fixes
